--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -1,6 +1,8 @@
+
 body{
     font-family: sans-serif;
     font-size: 15px;
+    color: black;
 }
 main{
     width: 70%;
@@ -13,8 +15,57 @@ main{
     margin-left: 50px;
     display: inline-block;
 }
-.thinkbig{
-    margin-top: 30px;
+#think{
+    margin-top: 10px;
     margin-left: 40px;
     margin-right: 40px;
+    text-align: center;
+    display: flex;
+    font-style: italic;
+}
+footer{
+    width: 70%;
+    margin-right: 15%;
+    margin-left: 15%;
+}
+#navegacion{
+    width: 100%;
+    height: 40px;
+    background-color: navy;
+    margin: 0px;
+}
+
+#telefonica{
+    width: 80px;
+    display: inline-block;
+    text-align: right;
+    display: flex;
+    padding-left: 300px;
+    margin-top: 3px;
+    
+}
+#elpais{
+    text-align: left;
+    display: flex;
+    padding-right: 300px;
+    font-family: serif;
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+#listanav{
+    font-size: 15px;
+    display: flex;
+    grid-template-columns: 3fr;
+    color: aliceblue;
+    text-decoration: none;
+    list-style: none;
+}
+
+.capitular {
+  float: left;
+  font-size: 100px; 
+  line-height: 0.8; 
+  margin-right: 0.1em; 
+  font-weight: bold;
 }
