--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -3,18 +3,14 @@ body{
     font-family: sans-serif;
     font-size: 15px;
     color: black;
+    font-weight: 300;
 }
 main{
     width: 70%;
     margin-right: 15%;
     margin-left: 15%;
 }
-#imagenheader{
-    margin-top: 20px;
-    margin-left: 50px;
-    margin-left: 50px;
-    display: inline-block;
-}
+
 #think{
     margin-top: 10px;
     margin-left: 40px;
@@ -40,8 +36,9 @@ footer{
     display: inline-block;
     text-align: right;
     display: flex;
-    padding-left: 300px;
+    padding-left: 0px;
     margin-top: 3px;
+    margin-right: 5px;
     
 }
 #elpais{
@@ -56,7 +53,6 @@ footer{
 #listanav{
     font-size: 15px;
     display: flex;
-    grid-template-columns: 3fr;
     color: aliceblue;
     text-decoration: none;
     list-style: none;
@@ -68,4 +64,71 @@ footer{
   line-height: 0.8; 
   margin-right: 0.1em; 
   font-weight: bold;
+}
+#unproyecto{
+    font-size: 10px;
+    margin-left: 200px;
+}
+h1{
+    font-family: serif;
+    font-weight: lighter;
+    font-size: 50px;
+    text-align: center;
+}
+h2{
+    font-family: sans-serif;
+    font-weight: lighter;
+    font-size: 15px;
+    text-align: center;
+}
+.iconos{
+    width: 40px;
+    height: 40px;
+    display: inline-flex;
+    justify-content: center; 
+    gap: 12px; 
+    margin-left: 20%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+   
+}
+#iconos{
+    width: 100%;
+    height: 80px;
+    display: inline-flexbox;
+}
+h3{
+    font-family: sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    text-align: center;
+    color: gray;
+}
+h4{
+    font-family: sans-serif;
+    font-weight: 500;
+    font-size: 9px;
+    text-align: center;
+    color: gray;
+    margin-bottom: 60px;
+}
+.imagenes{
+    width: 900px;
+    align-items: center;
+}
+.ilustraciones{
+    width: 900px;
+    margin: 40px;
+    align-self: center;
+}
+.mashistorias{
+    width: 400px;
+    margin-right: 200px;
+    margin-left: 200px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+.thetrust{
+    width: 100px;
+    margin-right: 200px;
 }
