--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -147,5 +147,25 @@ ul {
   list-style: none; 
 }
 
-
-
+hr{
+    height: 2px;
+    background-color: black;
+    width: 70%;
+    margin: 20px auto;
+    margin-bottom: 40px;
+}
+.gris{
+    color: grey;
+}
+a:link{
+    color: aliceblue;
+    text-decoration: none;
+}
+a:active{
+    color: aliceblue;
+    text-decoration: none;
+}
+a:visited{
+    color: aliceblue;
+    text-decoration: none;
+}
