--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -4,11 +4,13 @@ body{
     font-size: 15px;
     color: black;
     font-weight: 300;
+    margin: 0px;
 }
 main{
     width: 70%;
     margin-right: 15%;
     margin-left: 15%;
+
 }
 
 #think{
@@ -46,8 +48,8 @@ footer{
     display: flex;
     padding-right: 300px;
     font-family: serif;
-    font-size: 20px;
-    margin-top: 10px;
+    font-size: 30px;
+    margin-top: 5px;
 }
 
 #listanav{
@@ -56,8 +58,8 @@ footer{
     color: aliceblue;
     text-decoration: none;
     list-style: none;
+    width: 100%;
 }
-
 .capitular {
   float: left;
   font-size: 100px; 
@@ -156,6 +158,8 @@ hr{
 }
 .gris{
     color: grey;
+    list-style: none;
+    margin-right: 5px;
 }
 a:link{
     color: aliceblue;
@@ -168,4 +172,10 @@ a:active{
 a:visited{
     color: aliceblue;
     text-decoration: none;
+}
+.listafooter{
+    margin-right: 10px;
+    display: inline;
+    margin-right: 15px;
+    font-family: 8px;
 }
