Correccion enlace a las actividades

--- a/estilos/estilo1.css
+++ b/estilos/estilo1.css
@@ -1,4 +1,14 @@
 body{
     font-size: 17px;
     background-color: aliceblue;
+    font-family: sans-serif;
+    margin: 60px;
+}
+p{
+    font-family: sans-serif;
+    color: blueviolet;
+    font-size: 20px;
+}
+a:hover{
+    color: darkslategrey;
 }
